# Employers_parser

./: .gitignore  README.md  main.py  pyproject.toml
src/: api_func.py  command_reader.py  config.py  db_creator.py  db_manager_cls.py  print_funcs.py  queries.sql
