[tool.poetry]
name = "employers-parser"
version = "0.1.0"
description = ""
authors = ["sveta.shlegel"]
readme = "README.md"
packages = [{include = "employers_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
